--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">Khalifah\'s DeepThought Challenge</string>
+    <string name="notifications">Notifications</string>
+    <string name="content_description_notifications">Notifications Menu</string>
+    <string name="content_description_settings">Settings Menu</string>
+    <string name="settings">Settings</string>
+    <string name="content_description_home">Home Menu Item</string>
+    <string name="home">Home</string>
 </resources>
