Add more icons; Rename previous icons build.gradle -- Enable Data Binding; Add Picasso & Klaxon dependencies Add code to use LoaderManager to query the url in MainActivity.kt; add ThoughtLoader.kt Add Think.java to parse the JSON Add internet permissions in AndroidManifest.xml
TODO:
Improve by adopting Deepthought.kt, DeepthoughtAdapter.kt

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="settings">Settings</string>
     <string name="content_description_home">Home Menu Item</string>
     <string name="home">Home</string>
+    <string name="lbl_learning_outcome">Learning Outcome</string>
+    <string name="no_thought_fetched">No thoughts could be fetched — none found!</string>
 </resources>
